--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,18 @@
 .App {
   padding: 30px;
-  display: flex;
 }
-
+.todolist {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+}
 .App > div {
   margin-right: 50px;
 }
 .error {
+  display: inline-block;
   border: red 1px solid;
+  width: 135px;
 }
 
 .error:focus-visible {
@@ -16,6 +21,8 @@
 
 .error-message {
   color: red;
+  font-size: 10px;
+  font-weight: normal;
 }
 
 .active-filter {
@@ -24,5 +31,26 @@
 
 .is-done {
   opacity: 0.5;
+  marker: none;
+}
+.title-block {
+  display: inline;
+}
+.input-button-block {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+button {
+  height: 25px;
+  margin: 5px;
+}
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.change-input {
+  width: 135px;
 }
 
